# sgf-analyzer

./: .gitignore  .travis.yml  BOT_HELP.md  README.md  annotations.py  arguments.py  bot_engines.py  config.py  config.yaml  log.py  new_analyze.py  problem_parser.py  pyproject.toml  remove_sgf_comments.py  requirements.txt  settings.py  sgfanalyze.py  sgfanalyzeRay.py  sgfanalyze_jumpman24.py  sgflib.py  test.py  todos.txt  utils.py
CLI/: __init__.py  gtp_console.py  leela.py
analyzetools/: analyze.py  leelatools.py  preparation.py  variations.py
config/: __init__.py  leela.py  leela_zero.py
docker/: docker-entrypoint.sh
sgf_analyzer/: annotations.py  bot_engines.py  config.yaml  log.py  readerthread.py  settings.py  sgfanalyze.py  sgflib.py  utils.py
sgflib/: __init__.py  proplib.py  sgflib.py
sgftools/: ReaderThread.py  annotations.py  comments.py  gotools.py  leela.py  logger.py  progressbar.py  ray.py  readerthread.py  regex.py  regex_collection.py  sgflib.py  sgflib_jumpman24.py  sgfparser.py  typelib.py  utils.py
test_sgf/: kgs_even_001.sgf  kgs_handicap_001.sgf  test.sgf
tests/: test_sgf_coords.py
