[tool.black]
line-length = 80

[tool.poetry]
name = "sgf-analyzer"
version = "0.1.0"
description = "SGF Analyzer"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
PyYAML = "^6.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
